# asciicam

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: asciinema.yml
asciicam/: __init__.py  __main__.py  api.py  config.py  notifier.py  recorder.py
asciicam/commands/: command.py  record.py  upload.py
doc/: asciicast-v1.md  asciicast-v2.md
man/: Makefile  asciinema.1  asciinema.1.md
tests/: config_test.py  demo.cast  distros.sh  integration.sh  pty_test.py
tests/asciicast/: v2_test.py
tests/distros/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu
