[metadata]
name = asciicam
version = 2.3.0
author = Md Sulaiman
author_email = m@ku1ik.com
url = https://asciicam.org
download_url =
    https://github.com/khulnasoft-lab/asciicam/archive/v%(version)s.tar.gz
description = Terminal session recorder
description_file = README.md
license = GNU GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities

[options]
include_package_data = True
packages =
    asciicam
    asciicam.asciicast
    asciicam.commands
install_requires =

[options.package_data]
asciicam = data/*.png

[options.entry_points]
console_scripts =
    asciicam = asciicam.__main__:main

[options.data_files]
share/doc/asciicam =
    CHANGELOG.md
    CODE_OF_CONDUCT.md
    CONTRIBUTING.md
    README.md
    doc/asciicast-v1.md
    doc/asciicast-v2.md
share/man/man1 =
    man/asciicam.1

[pycodestyle]
ignore = E501,E402,E722
